--- a/sumathi.html
+++ b/sumathi.html
@@ -4,17 +4,282 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="sumathi.css">
-  <title>Document</title>
+  <link rel="icon" type="image/x-icon" href="images/sumathilogo.jpg">
+  <title>Sumathi</title>
 </head>
 <body>
-  <div class="hero">
-    <div class="wrapper">
-      <div class="logo">
-        <img src="images/logo.jpg" alt="">
+  <div class="wrapper">
+    <header class="header">
+      <div class="logo-block">
+        <img class="logo" src="images/logo.jpg" alt="sumathi logo">
       </div>
-    </div>
+      <nav class="navbar">
+        <ul class="navbar-list">
+          <li class="navbar-li navbar-li1 ">
+            <a href="#">Home</a>
+          </li>
+          <li class="navbar-li navbar-li2">
+            <a href="#">Books Published</a>
+            <span class="dropdown">
+              <img class="dropper" src="svg/dropdown.svg" alt="dropper">
+            </span>
+            <div class="dropdown-items dropdown-items1">
+              <ul class="dropdown-list">
+                <div class="column">
+                  <li class="dropdown-li">
+                    <a href="#">Technology Today</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">Cutting Edge AI Tools</a>
+                  </li>
+                </div>
+              </ul>
+            </div>
+            
+          </li>
+          <li class="navbar-li navbar-li3">
+            <a href="#"><b>అందరి కోసం</b></a>
+            <span>
+              <img class="dropper" src="svg/dropdown.svg" alt="dropper">
+            </span> 
+            <div class="dropdown-items dropdown-items2">
+              <ul class="dropdown-list">
+                <div class="column column1">
+                  <li class="dropdown-li">
+                    <a href="#">ముఖచిత్ర కథ</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">అంతర్నేత్రం</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">వార్తల్లో వ్య్తక్తి</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">హెల్త్ టిప్స్</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">సెటైర్</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">చూడాల్సిన ప్రదేశం</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">రేపటి కోసం</a>
+                  </li>
+                </div>
+                <div class="column column2">
+                  <li class="dropdown-li">
+                    <a href="#">ముఖా ముఖి</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">వినాల్సిన పాట</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">చదవాల్సిన పుస్తకం</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">చూడాల్సిన సినిమా</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">సాహితీ శిఖరాలు</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">జీవన చిత్రాలు</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">ఈ నెల స్మరణీయులు</a>
+                  </li>
+                </div>
+                <div class="column column3">
+                  <li class="dropdown-li">
+                    <a href="#">పండుగ</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">పుస్తక సమీక్ష</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">సభలు-సత్కారాలు</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">గ్రంధావిష్కరణ</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">పుస్తక పరిచయం</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">సాహితీ పద సుమతి</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">చిత్ర కథ-చిత్రకవిత</a>
+                  </li>
+                </div>
+              </ul>
+            </div>
+          </li>
+          <li class="navbar-li navbar-li4">
+            <a href="#"><b>యువత కోసం</b></a>
+            <span>
+              <img class="dropper" src="svg/dropdown.svg" alt="dropper">
+            </span>
+            <div class="dropdown-items dropdown-items3">
+              <ul class="dropdown-list">
+                <div class="column">
+                  <li class="dropdown-li">
+                    <a href="#">GPT-4 (టెక్నాలజీ)</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">ఫోటోగ్రఫి పాఠాలు (మూడో కన్ను)</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">యువతా తెలుసుకో</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">కరెంట్ అఫైర్స్</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">Python నేర్చుకోండి</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">క్రీడా ప్రపంచం</a>
+                  </li>
+                </div>
+              </ul>
+            </div>
+          </li>
+          <li class="navbar-li navbar-li5">
+            <a href="#"><b>మహిళల కోసం</b></a>
+            <span>
+              <img class="dropper" src="svg/dropdown.svg" alt="dropper">
+            </span>
+            <div class="dropdown-items dropdown-items4">
+              <ul class="dropdown-list">
+                <div class="column">
+                  <li class="dropdown-li">
+                    <a href="#">డూడ్లింగ్</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">కొత్తగా వస్తున్నాయి</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">వంటా వార్పూ</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">ఆధ్యాత్మికం</a>
+                  </li>
+                </div>
+              </ul>
+            </div>
+          </li>
+          <li class="navbar-li navbar-li6">
+            <a href="#"><b>పిల్లలు కోసం</b></a>
+            <span>
+              <img class="dropper" src="svg/dropdown.svg" alt="dropper">
+            </span>
+            <div class="dropdown-items dropdown-items5">
+              <ul class="dropdown-list">
+                <div class="column">
+                  <li class="dropdown-li">
+                    <a href="#">పిల్లలు కథ</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">పిల్లలు పిడుగుల</a>
+                  </li>
+                </div>
+              </ul>
+            </div>
+          </li>
+          <li class="navbar-li navbar-li7">
+            <a href="#"><b>కథలు, సీరియల్స్</b></a>
+            <span>
+              <img class="dropper" src="svg/dropdown.svg" alt="dropper">
+            </span>
+            <div class="dropdown-items dropdown-items6 take-to-in">
+              <ul class="dropdown-list">
+                <div class="column column1">
+                  <li class="dropdown-li">
+                    <a href="#">తనువా ..హరి చందనమే (సరస కథ)</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">రాణా ప్రతాప్ (చరిత్రాత్మక సీరియల్)</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">గర్భ శ్లోకం (క్రైం సీరియల్)</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">కలవరమాయే మదిలో (హాస్యకథ)</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#"> అహింసా పరమో ధర్మః (కథ)</a>
+                  </li>
+                </div>
+                <div class="column column2">
+                  <li class="dropdown-li">
+                    <a href="#">పరుగులు తీసే నీ వయసునకు(సీరియల్)</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">బామ్మ సాహసం (క్రైం కథ)</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">చెక్క గుర్రాలు (వాస్తవ కథ)</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">చరమాంకం (కథ)</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">పర్సోపాఖ్యానం (కథ)</a>
+                  </li>
+                </div>
+              </ul>
+            </div>
+          </li>
+          <li class="navbar-li navbar-li8">
+            <a href="#">Write to us</a>
+            <span>
+              <img class="dropper" src="svg/dropdown.svg" alt="dropper">
+            </span>
+            <div class="dropdown-items dropdown-items7">
+              <ul class="dropdown-list">
+                <div class="column">
+                  <li class="dropdown-li">
+                    <a href="#">కవితలు</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">కథలు, సీరియల్స్</a>
+                  </li>
+                  <li class="dropdown-li" style="border-top:1px solid rgb(239, 236, 236); padding-top:1rem">
+                    <a href="#">others...</a>
+                  </li>
+                </div>
+              </ul>
+            </div>
+            
+          </li>
+          <li class="navbar-li navbar-li9">
+            <a href="#">Archive</a>
+            <span>
+              <img class="dropper" src="svg/dropdown.svg" alt="dropper">
+            </span>
+            <div class="dropdown-items dropdown-items8">
+              <ul class="dropdown-list">
+                <div class="column">
+                  <li class="dropdown-li">
+                    <a href="#">March 2023 Magazine</a>
+                  </li>
+                  <li class="dropdown-li">
+                    <a href="#">April 2023 Magazine</a>
+                  </li>
+                </div>
+              </ul>
+            </div>
+          </li>
+          <li class="navbar-li navbar-li10">
+            <a href="#">Subscribe</a>
+          </li>
+        </ul>
 
+      </nav>
+    </header>
   </div>
-  
+  <script src="sumathi.js"></script>
 </body>
 </html>
