--- a/sumathi.html
+++ b/sumathi.html
@@ -14,6 +14,12 @@
         <img class="logo" src="images/logo.jpg" alt="sumathi logo">
       </div>
       <nav class="navbar">
+        <div class="menu">
+          <img src="svg/menu.svg" alt="menu-icon">
+        </div>
+        <div class="close">
+          <img src="svg/close.svg" alt="close-icon">
+        </div>
         <ul class="navbar-list">
 
           <li class="navbar-li navbar-li1 ">
