--- a/subscribe.html
+++ b/subscribe.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="wrapper">
+    <div class="wrapper wrapper1">
         <div class="not-subscribed">
             <h1><a href="sumathi.html">SUMATHI MASA PATHRIKA</a></h1>
             <div class="one"><span style="color: rgb(34, 34, 165);">Subscription code</span> is required to access our
