--- a/sumathi.html
+++ b/sumathi.html
@@ -28,7 +28,7 @@
         <ul class="navbar-list">
           <li class="navbar-li navbar-li1 ">
             <div class="wrap">
-              <a class="navbar-a" href="#">Home</a>
+              <a class="navbar-a" href="sumathi.html">Home</a>
             </div>
           </li>
 
@@ -43,10 +43,10 @@
               <ul class="dropdown-list">
                 <div class="column">
                   <li class="dropdown-li">
-                    <a href="#">Technology Today</a>
+                    <a href="login.html">Technology Today</a>
                   </li>
                   <li class="dropdown-li">
-                    <a href="#">Cutting Edge AI Tools</a>
+                    <a href="login.html">Cutting Edge AI Tools</a>
                   </li>
                 </div>
               </ul>
@@ -347,141 +347,127 @@
         <div class="previous-magazines">
           <div class="head">Have A Glance At Our Previous Magazines</div>
           <div class="magazines">
-            <a href="">
-              <div class="image-card">
-                <div class="current-image">
-                  <img src="images/May-2024.jpg" alt="current month image">
-                </div>
-                <div class="month">MAY 2024</div>
-                <div class="download">CLICK TO DOWNLOAD</div>
+
+            <div class="image-card">
+              <div class="current-image">
+                <img src="images/May-2024.jpg" alt="current month image">
               </div>
-            </a>
-            <a href="">
-              <div class="image-card">
-                <div class="current-image">
-                  <img src="images/April-2024.jpg" alt="current month image">
-                </div>
-                <div class="month">APR 2024</div>
-                <div class="download">CLICK TO DOWNLOAD</div>
+              <div class="month">MAY 2024</div>
+              <div class="download"><a href="">CLICK TO DOWNLOAD</a></div>
+            </div>
+
+            <div class="image-card">
+              <div class="current-image">
+                <img src="images/April-2024.jpg" alt="current month image">
               </div>
-            </a>
-            <a href="">
-              <div class="image-card">
-                <div class="current-image">
-                  <img src="images/Mar-2024.jpg" alt="current month image">
-                </div>
-                <div class="month">MAR 2024</div>
-                <div class="download">CLICK TO DOWNLOAD</div>
+              <div class="month">APR 2024</div>
+              <div class="download"><a href="">CLICK TO DOWNLOAD</a></div>
+            </div>
+
+            <div class="image-card">
+              <div class="current-image">
+                <img src="images/Mar-2024.jpg" alt="current month image">
               </div>
-            </a>
-            <a href="">
-              <div class="image-card">
-                <div class="current-image">
-                  <img src="images/Feb-2024.jpg" alt="current month image">
-                </div>
-                <div class="month">FEB 2024</div>
-                <div class="download">CLICK TO DOWNLOAD</div>
+              <div class="month">MAR 2024</div>
+              <div class="download"><a href="">CLICK TO DOWNLOAD</a></div>
+            </div>
+
+            <div class="image-card">
+              <div class="current-image">
+                <img src="images/Feb-2024.jpg" alt="current month image">
               </div>
-            </a>
-            <a href="">
-              <div class="image-card">
-                <div class="current-image">
-                  <img src="images/Jan-2024.jpg" alt="current month image">
-                </div>
-                <div class="month">JAN 2024</div>
-                <div class="download">CLICK TO DOWNLOAD</div>
+              <div class="month">FEB 2024</div>
+              <div class="download"><a href="">CLICK TO DOWNLOAD</a></div>
+            </div>
+
+            <div class="image-card">
+              <div class="current-image">
+                <img src="images/Jan-2024.jpg" alt="current month image">
               </div>
-            </a>
-            <a href="">
-              <div class="image-card">
-                <div class="current-image">
-                  <img src="images/Dec-2023.jpg" alt="current month image">
-                </div>
-                <div class="month">DEC 2023</div>
-                <div class="download">CLICK TO DOWNLOAD</div>
+              <div class="month">JAN 2024</div>
+              <div class="download"><a href="">CLICK TO DOWNLOAD</a></div>
+            </div>
+
+            <div class="image-card">
+              <div class="current-image">
+                <img src="images/Dec-2023.jpg" alt="current month image">
               </div>
+              <div class="month">DEC 2023</div>
+              <div class="download"><a href="">CLICK TO DOWNLOAD</a></div>
+            </div>
             </a>
-            <a href="">
-              <div class="image-card">
-                <div class="current-image">
-                  <img src="images/Nov-2023.jpg" alt="current month image">
-                </div>
-                <div class="month">NOV 2023</div>
-                <div class="download">CLICK TO DOWNLOAD</div>
+
+            <div class="image-card">
+              <div class="current-image">
+                <img src="images/Nov-2023.jpg" alt="current month image">
               </div>
-            </a>
-            <a href="">
-              <div class="image-card">
-                <div class="current-image">
-                  <img src="images/Oct-2023.jpg" alt="current month image">
-                </div>
-                <div class="month">OCT 2023</div>
-                <div class="download">CLICK TO DOWNLOAD</div>
+              <div class="month">NOV 2023</div>
+              <div class="download"><a href="">CLICK TO DOWNLOAD</a></div>
+            </div>
+
+            <div class="image-card">
+              <div class="current-image">
+                <img src="images/Oct-2023.jpg" alt="current month image">
               </div>
-            </a>
-            <a href="">
-              <div class="image-card">
-                <div class="current-image">
-                  <img src="images/Sep-2023.jpg" alt="current month image">
-                </div>
-                <div class="month">SEP 2023</div>
-                <div class="download">CLICK TO DOWNLOAD</div>
+              <div class="month">OCT 2023</div>
+              <div class="download"><a href="">CLICK TO DOWNLOAD</a></div>
+            </div>
+
+            <div class="image-card">
+              <div class="current-image">
+                <img src="images/Sep-2023.jpg" alt="current month image">
               </div>
-            </a>
-            <a href="">
-              <div class="image-card">
-                <div class="current-image">
-                  <img src="images/Aug-2023.jpg" alt="current month image">
-                </div>
-                <div class="month">AUG 2023</div>
-                <div class="download">CLICK TO DOWNLOAD</div>
+              <div class="month">SEP 2023</div>
+              <div class="download"><a href="">CLICK TO DOWNLOAD</a></div>
+            </div>
+
+            <div class="image-card">
+              <div class="current-image">
+                <img src="images/Aug-2023.jpg" alt="current month image">
               </div>
-            </a>
-            <a href="">
-              <div class="image-card">
-                <div class="current-image">
-                  <img src="images/July-2023.jpg" alt="current month image">
-                </div>
-                <div class="month">JULY 2023</div>
-                <div class="download">CLICK TO DOWNLOAD</div>
+              <div class="month">AUG 2023</div>
+              <div class="download"><a href="">CLICK TO DOWNLOAD</a></div>
+            </div>
+
+            <div class="image-card">
+              <div class="current-image">
+                <img src="images/July-2023.jpg" alt="current month image">
               </div>
-            </a>
-            <a href="">
-              <div class="image-card">
-                <div class="current-image">
-                  <img src="images/June-2023.jpg" alt="current month image">
-                </div>
-                <div class="month">JUNE 2023</div>
-                <div class="download">CLICK TO DOWNLOAD</div>
+              <div class="month">JULY 2023</div>
+              <div class="download"><a href="">CLICK TO DOWNLOAD</a></div>
+            </div>
+
+            <div class="image-card">
+              <div class="current-image">
+                <img src="images/June-2023.jpg" alt="current month image">
               </div>
-            </a>
-            <a href="">
-              <div class="image-card">
-                <div class="current-image">
-                  <img src="images/May-2023.jpg" alt="current month image">
-                </div>
-                <div class="month">MAY 2023</div>
-                <div class="download">CLICK TO DOWNLOAD</div>
+              <div class="month">JUNE 2023</div>
+              <div class="download"><a href="">CLICK TO DOWNLOAD</a></div>
+            </div>
+
+            <div class="image-card">
+              <div class="current-image">
+                <img src="images/May-2023.jpg" alt="current month image">
               </div>
-            </a>
-            <a href="">
-              <div class="image-card">
-                <div class="current-image">
-                  <img src="images/April-2023.jpg" alt="current month image">
-                </div>
-                <div class="month">APR 2023</div>
-                <div class="download">CLICK TO DOWNLOAD</div>
+              <div class="month">MAY 2023</div>
+              <div class="download"><a href="">CLICK TO DOWNLOAD</a></div>
+            </div>
+
+            <div class="image-card">
+              <div class="current-image">
+                <img src="images/April-2023.jpg" alt="current month image">
               </div>
-            </a>
-            <a href="">
-              <div class="image-card">
-                <div class="current-image">
-                  <img src="images/Mar-2023.jpg" alt="current month image">
-                </div>
-                <div class="month">MAR 2023</div>
-                <div class="download">CLICK TO DOWNLOAD</div>
+              <div class="month">APR 2023</div>
+              <div class="download"><a href="">CLICK TO DOWNLOAD</a></div>
+            </div>
+
+            <div class="image-card">
+              <div class="current-image">
+                <img src="images/Mar-2023.jpg" alt="current month image">
               </div>
-            </a>
+              <div class="month">MAR 2023</div>
+              <div class="download"><a href="">CLICK TO DOWNLOAD</a></div>
+            </div>
 
 
 
@@ -547,6 +533,36 @@
       </section>
 
     </main>
+
+    <footer class="footer">
+      <div class="head">Contact Us</div>
+      <div class="footer-wrapper">
+
+        <div class="footer-info">
+          <div class="logo">
+
+            <img class="footer-logo" src="images/sumathilogo.jpg" alt="logo">
+
+          </div>
+          <div class="info">
+            <div><b>Publisher</b></div>
+            <div>C/o. SU-MATHI Publications (Sumathi Foundation)</div>
+            <div><b>Managed by</b></div>
+            <div>Society for Human Excellence & Higher Education.</div>
+            <div>( RC No. 538 / 2006 )</div>
+            <div>H.No. 3-29-78</div>
+            <div>Krishna Nagar , Guntur</div>
+            <div>Email : sumathifoundation@gmail.com</div>
+          </div>
+        </div>
+
+      </div>
+      <div class="rights">Â© 2023 SUMATHIMASAPATRIKA . All Rights Reserved</div>
+
+
+    </footer>
+
+
   </div>
   <script src="sumathi.js"></script>
 </body>
