--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrapper login-wrapper">
         <div class="subscribed">
-            <h1><a href="sumathi.html">SUMATHI MASA PATHRIKA</a></h1>
+            <h1><a href="index.html">SUMATHI MASA PATHRIKA</a></h1>
             <p>Enter the subscription code of current month</p>
              <form action="">
                  <input class="input" id="focus" name="code" type="password" placeholder="Enter code...." required>
@@ -21,6 +21,8 @@
         <div class="red">**invalid code</div>
         <div><a class="not" href="subscribe.html">not yet subscribed</a></div>
     </div>
+
+    <script src="login.js"></script>
 
 </body>
 
