--- a/subscribe.html
+++ b/subscribe.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrapper wrapper1">
         <div class="not-subscribed">
-            <h1><a href="sumathi.html">SUMATHI MASA PATHRIKA</a></h1>
+            <h1><a href="index.html">SUMATHI MASA PATHRIKA</a></h1>
             <div class="one"><span style="color: rgb(34, 34, 165);">Subscription code</span> is required to access our
                 magazine</div>
             <div class="two">To get Subscription code Contact to <span class="phno">7893111985</span></div>
