--- a/index.html
+++ b/index.html
@@ -313,9 +313,16 @@
 
           <li class="navbar-li navbar-li10">
             <div class="wrap">
-              <a class="navbar-a" href="#">Subscribe</a>
+              <a class="navbar-a" href="login.html">LOGIN</a>
             </div>
           </li>
+
+          <li class="navbar-li navbar-li11">
+            <div class="wrap">
+              <a class="navbar-a" href="subscribe.html">SUBSCRIBE</a>
+            </div>
+          </li>
+
         </ul>
       </nav>
 
@@ -331,16 +338,16 @@
       <section class="sec section2">
         <div class="current-magazine">
           <div class="head">Read the Current Magazine</div>
-         
-            <div class="image-card">
-              <div class="current-image">
-                <a href="">
-                  <img src="images/June-2024.jpg" alt="current month image">
-                </a>
-              </div>
-              <div class="month">JUNE 2024</div>
-              <div class="download"><a href="">CLICK TO OPEN</a></div>
+
+          <div class="image-card">
+            <div class="current-image">
+              <a href="#">
+                <img src="images/June-2024.jpg" alt="current month image">
+              </a>
             </div>
+            <div class="month">JUNE 2024</div>
+            <div class="download"><a href="#">CLICK TO OPEN</a></div>
+          </div>
           </a>
         </div>
       </section>
