--- a/sumathi.html
+++ b/sumathi.html
@@ -311,11 +311,11 @@
             </div>
           </li>
 
-          <li class="navbar-li navbar-li10">
+          <!-- <li class="navbar-li navbar-li10">
             <div class="wrap">
               <a class="navbar-a" href="#">Subscribe</a>
             </div>
-          </li>
+          </li> -->
         </ul>
       </nav>
 
